[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/characters/guard.png" type="Texture" id=1]
[ext_resource path="res://characters/guard/Guard.gd" type="Script" id=2]
[ext_resource path="res://characters/guard/GuardStateMachine.gd" type="Script" id=3]
[ext_resource path="res://characters/guard/Idle.gd" type="Script" id=4]
[ext_resource path="res://characters/guard/Patrol.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[node name="Guard" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="GuardStateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )
animationPlayerPath = NodePath("../AnimationPlayer")
spritePath = NodePath("../Sprite")

[node name="Idle" type="Node2D" parent="GuardStateMachine"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="GuardStateMachine/Idle"]
one_shot = true

[node name="Patrol" type="Node2D" parent="GuardStateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="GuardStateMachine/Patrol"]

[node name="EdgeDetect" type="RayCast2D" parent="GuardStateMachine/Patrol"]
position = Vector2( 5, 0 )
cast_to = Vector2( 0, 6 )
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false

[node name="EdgeTimer" type="Timer" parent="GuardStateMachine/Patrol/EdgeDetect"]
wait_time = 0.2
one_shot = true

[node name="WallDetect" type="RayCast2D" parent="GuardStateMachine/Patrol"]
position = Vector2( 0, -4 )
cast_to = Vector2( 6, 0 )
collision_mask = 16

[connection signal="timeout" from="GuardStateMachine/Idle/Timer" to="GuardStateMachine/Idle" method="_on_Timer_timeout"]
[connection signal="timeout" from="GuardStateMachine/Patrol/Timer" to="GuardStateMachine/Patrol" method="_on_Timer_timeout"]
[connection signal="timeout" from="GuardStateMachine/Patrol/EdgeDetect/EdgeTimer" to="GuardStateMachine/Patrol" method="_on_EdgeTimer_timeout"]
